[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/lienzo.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlayerElection.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="PlayerElection" type="Node2D"]
script = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 450, 450 )
scale = Vector2( 0.88, 0.88 )
texture = ExtResource( 1 )

[node name="VotingPanel" type="Node2D" parent="."]
position = Vector2( 450, 450 )

[node name="Board" type="Sprite" parent="VotingPanel"]
texture = ExtResource( 3 )

[node name="TitleLabel" type="Label" parent="VotingPanel/Board"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -718.0
margin_top = -230.0
margin_right = -74.0
margin_bottom = -195.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Esperando a otros jugadores"
align = 1
valign = 1
autowrap = true

[node name="Players" type="Node2D" parent="VotingPanel/Board"]
position = Vector2( -270, -150 )

[node name="OmitButton" type="Button" parent="VotingPanel/Board"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -520.0
margin_top = -450.0
margin_right = -270.0
margin_bottom = -390.0
custom_fonts/font = SubResource( 2 )
text = "Omitir"

[connection signal="pressed" from="VotingPanel/Board/OmitButton" to="." method="_on_OmitButton_pressed"]
